{
    "name": "VRControls",
    "maps": [
        {
            "name": "XRRight",
            "id": "3c8fd46a-0dc1-42e7-b076-29d6379b444a",
            "actions": [
                {
                    "name": "GripPress",
                    "type": "Button",
                    "id": "9ad36a68-dd80-4e97-bc7b-16758b465398",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TriggerTouch",
                    "type": "Value",
                    "id": "855d564f-2732-4841-9429-c5d5599d1a95",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TriggerPress",
                    "type": "Button",
                    "id": "96263056-11a4-4e38-bad9-ae35ff0d4c1f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrimaryTouch",
                    "type": "Button",
                    "id": "27b42b5b-e02a-4b66-a63b-9aaa6d7e08ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrimaryPress",
                    "type": "Button",
                    "id": "92ebd2ba-9586-4c3c-b749-0bb6029cc134",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryTouch",
                    "type": "Button",
                    "id": "995032b6-a141-4f0e-8fe1-1da4290021da",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryPress",
                    "type": "Button",
                    "id": "c661fd39-7835-4b14-b9d7-e420b295bc3a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "JoystickTouch",
                    "type": "Button",
                    "id": "2b5d784e-5f32-45c3-961c-158509f91298",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "JoystickPress",
                    "type": "Button",
                    "id": "8935e9dc-f45b-46ca-bfb9-51c214079a35",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Joystick",
                    "type": "Value",
                    "id": "eacea3c4-fedb-4ccc-9761-08ba6e7a4e53",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "59c04a12-9582-4669-bfa4-277086ac15b2",
                    "path": "<XRController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "GripPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fe18ebe-c918-457f-8355-46b6bb8cf597",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "TriggerPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d817c86-2866-4b9d-9545-b39aeacb52ea",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92605016-04d5-4580-9d27-3fae15573e62",
                    "path": "<XRController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8c388e8-9181-4138-8c51-931fc1ba8ea0",
                    "path": "<XRController>{RightHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a51618d-b5b2-48c7-9926-0ef507fe3a3b",
                    "path": "<XRController>{RightHand}/primaryTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "daf2528f-5ce4-42e7-96f3-3fddbd559d65",
                    "path": "<XRController>{RightHand}/secondaryTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a8cc10d-373d-405f-aaae-f3b699c7d170",
                    "path": "<XRController>{RightHand}/thumbstickTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoystickTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "464f6409-9852-4545-be18-c8259e491047",
                    "path": "<XRController>{RightHand}/triggerTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f6c882ce-7d70-47e2-bf9d-40f999adceab",
                    "path": "<XRController>{RightHand}/thumbstickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoystickPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "XRLeft",
            "id": "4038f130-7b63-408f-8bc4-1b309c58f744",
            "actions": [
                {
                    "name": "GripPress",
                    "type": "Button",
                    "id": "29b18b20-c062-4374-806c-e0e434fcf59b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TriggerTouch",
                    "type": "Value",
                    "id": "3a9f6cb7-b703-4756-9d02-11a2cfc90841",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TriggerPress",
                    "type": "Button",
                    "id": "06b748bf-5b89-4adc-8717-20941c22b5a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrimaryTouch",
                    "type": "Button",
                    "id": "d9c9dbc3-3849-4d9f-a985-47e7d9989527",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrimaryPress",
                    "type": "Button",
                    "id": "c047c9c4-fda5-4944-ae57-cb028ac351b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryTouch",
                    "type": "Button",
                    "id": "7cd5c785-f540-4b2c-bcad-0023f393f081",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryPress",
                    "type": "Button",
                    "id": "131318dd-3899-4617-bcee-098bbeee6420",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "JoystickTouch",
                    "type": "Button",
                    "id": "39617e23-7f34-4030-834c-e63bf51215f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "JoystickPress",
                    "type": "Button",
                    "id": "2ee1a294-c180-4816-b7c1-1a63fb2ff1da",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Joystick",
                    "type": "Value",
                    "id": "42601efe-ee76-4997-ad97-878c546c53ae",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fef42440-7312-4c3c-bd85-80dd1cec111f",
                    "path": "<XRController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "GripPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "844d8fb2-79b0-496b-a2ef-3ae4e835cbbf",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16da2993-4998-4458-804f-4ddd00c9f324",
                    "path": "<XRController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "179e82a9-178a-46ce-a0e4-43d787dcc595",
                    "path": "<XRController>{LeftHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03104bf7-c85c-40d0-aaef-d447e23923be",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "TriggerPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b8a7cf4-17cc-44f9-9598-57a8b5983671",
                    "path": "<XRController>{LeftHand}/triggerTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "469a5214-b200-47bd-a2bd-c3f0ec21c6d0",
                    "path": "<XRController>{LeftHand}/primaryTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7cc28634-53cc-4c3f-b6b8-2c25d5f66db9",
                    "path": "<XRController>{LeftHand}/secondaryTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c9c3d64-1389-42bf-b2ac-b1c9647291fd",
                    "path": "<XRController>{LeftHand}/thumbstickTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoystickTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b5b60be-ba08-477f-83fc-c71a9b788a1c",
                    "path": "<XRController>{LeftHand}/thumbstickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoystickPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}